# painted-turtle

./: README.md  pyproject.toml
docs/: alignment.md  fiducials.md
notebooks/: Draw-a-square.ipynb  Inkwells-and-rinse.ipynb
pt/: __init__.py  vectors.py
pt/interactive/: __init__.py  alignment.py  interactive_utils.py
pt/plotter/: AxiDrawPlotter.py  MPLPlotter.py  Plotter.py  __init__.py
pt/ptobjects/: BrushCleaner.py  Canvas.py  PTObject.py  __init__.py
tests/: test_alignment.py
