[project]
name = "painted-turtle"
version = "0.1.0"
description = ""
authors = [{ name = "Jordan Matelsky", email = "j6k4m8@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.1",
    "numpy>=2.0.0",
    "pynput>=1.8.1",
    "textual>=3.2.0",
]

[project.scripts]
pti = "pt.interactive:main"

[tool.hatch.build.targets.wheel]
packages = ["pt"]

[dependency-groups]
dev = ["black>=24.4.2", "ipykernel>=6.29.5", "pytest>=8.2.2", "ruff>=0.5.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
